--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=Currency
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://um-laravel.herokuapp.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql11.freemysqlhosting.net
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=sql11523879
+DB_USERNAME=sql11523879
+DB_PASSWORD=Dl5pnYy167
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
